--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                     </suiteXmlFiles>
                     <!-- Forward system props to tests -->
                     <systemPropertyVariables>
-                        <allure.results.directory>${allure.results.directory}</allure.results.directory>
+                        <allure.results.directory>${project.basedir}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
                     <!-- parallel handled via testng.xml -->
                 </configuration>
